# cpgdetector

./: .gitignore  README.md  environment.yml  plan.md  pyproject.toml  requirements.txt
CpGDetector/src/cpgdetector/: __init__.py  baseline.py  compare_baselines.py  data.py  dnabert2_baseline.py  evaluate.py  interval_metrics.py  losses.py  metrics.py  model.py  postprocess.py  predict.py  profile.py  report.py  train.py  utils.py  visualize.py  visualize_region.py
configs/: default.yaml  remote.yaml  smoke.yaml
data/: README  cpgIslandExt.tsv
data/dna/: CHECKSUMS
docs/: dnabert2_baseline_notes.md  model_task_optimization_plan.md  performance_notes.md
scripts/: run_full.ps1  run_full.sh
tests/: test_data_model_metrics.py
